Fixed loading forever

--- a/Om-Mig.html
+++ b/Om-Mig.html
@@ -18,10 +18,10 @@
         <img class="logo" src="" alt="logo">
         <nav>
             <ul class="nav_links">
-            <li><a href="Index.html">Hjem</a></li>
+            <li><a href="./index.html">Hjem</a></li>
             <li><a href="#" id="Bold">Om mig</a></li>
-            <li><a href="Praktik.html">Praktik forløb</a></li>
-            <li><a href="Kontakt.html">Projekter</a></li>
+            <li><a href="./Praktik.html">Praktik forløb</a></li>
+            <li><a href="./Kontakt.html">Projekter</a></li>
         </ul>
         </nav>
         <a class="cta" href="#"><button>Kontakt</button></a>
