--- a/Kontakt.html
+++ b/Kontakt.html
@@ -15,9 +15,9 @@
             <img class="logo" src="" alt="logo">
             <nav>
                 <ul class="nav_links">
-                <li><a href="Index.html">Hjem</a></li>
-                <li><a href="Om-Mig.html">Om mig</a></li>
-                <li><a href="Praktik.html">Praktik forløb</a></li>
+                <li><a href="./index.html">Hjem</a></li>
+                <li><a href="./Om-Mig.html">Om mig</a></li>
+                <li><a href="./Praktik.html">Praktik forløb</a></li>
                 <li><a href="#" id="Bold">Projekter</a></li>
             </ul>
             </nav>
