--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <nav>
             <ul class="nav_links">
             <li><a href="#" id="Bold">Hjem</a></li>
-            <li><a href="Om-Mig.html">Om mig</a></li>
-            <li><a href="Praktik.html">Praktik forløb</a></li>
-            <li><a href="Kontakt.html">Projekter</a></li>
+            <li><a href="./Om-Mig.html">Om mig</a></li>
+            <li><a href="./Praktik.html">Praktik forløb</a></li>
+            <li><a href="./Kontakt.html">Projekter</a></li>
         </ul>
         </nav>
         <a class="cta" href="#"><button>Kontakt</button></a>
