Added images to Index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
      <div id="middle">
      <div id="boxone">
-        <img id="myself" src="/img/IMG_0382.png" alt="">
+        <img id="myself" src="./img/IMG_0382.png" alt="">
         <div id="midtext">
             <p>Elias Kouly</p>
             <p id="text">Mit navn er Elias Kouly, Jeg er en EUX student, hvor det er en blanding af gymnasium
@@ -44,9 +44,9 @@
                 <h2 id="prog">Programmering</h2>
                 <h2 id="anim">3D Animation</h2>
             </div>
-            <img id="programming" src="/img/Programmming.png" alt="">
+            <img id="programming" src="./img/Programmming.png" alt="">
             
-            <img id="animation" src="/img/Animation.png" alt="">
+            <img id="animation" src="./img/Animation.png" alt="">
         </div>
      </div>
     </div>
