--- a/Praktik.html
+++ b/Praktik.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-    <script src="javascript.js"></script>
+    <script src="./javascript.js"></script>
         <!--Start Navbar-->
         <header>
             <img class="logo" src="" alt="logo">
